# skylb-api

./: .gitignore  .gitmodules  BUILD.bazel  DEPS  Makefile  OWNERS  README.md  WORKSPACE  docker-compose-features.yml  docker-compose-int-test.yml  go.mod  go.sum  repositories.bzl
balancer/: BUILD  BUILD.bazel  balancer.go  consistent.go  debug.go  mainservice.go  roundrobin.go  roundrobin_test.go
client/: BUILD  BUILD.bazel  client.go  config.go  example_test.go  locator.go
client/option/: BUILD  options.go
cmd/demo/: BUILD  api_int_test.go  client.go  client_failfast.go  consistenthash.go  gateway.go  server.go  serverclient.go  servermulti.go  streamclient.go  webclient.go
cmd/demo/k8s-conf/: skylb-demo-client.yaml  skylb-demo-server.yaml
cmd/demo/proto/: BUILD  api.pb.go  api.pb.gw.go  api.proto
cmd/demo/rpc/: BUILD  rpc.go
cmd/fake-service/: BUILD  main.go  start.sh
cmd/grpc-proxy/: BUILD  main.go
cmd/grpc-proxy-demo/: BUILD  client.go  server.go
cmd/grpc-proxy-demo/proto/: BUILD  BUILD.bazel  api.pb.go  api.proto
cmd/mainservice-demo/: BUILD  BUILD.bazel  client.go  server.go
cmd/mainservice-demo/proto/: BUILD  BUILD.bazel  api.pb.go  api.proto
cmd/skytest/: BUILD  BUILD.bazel  README.md  client.go  grpc.go  server.go
cmd/skytest/java/: BUILD  logback.xml
cmd/skytest/java/com/jingoal/skytest/: BUILD  SkytestClient.java
cmd/skytest/proto/: BUILD  BUILD.bazel  api.pb.go  api.proto
cmd/stress/: BUILD  USAGE.md  client.go  gateway.go  server.go
cmd/stress/proto/: BUILD  api.pb.go  api.pb.gw.go  api.proto
demo/: BUILD  BUILD.bazel  installProtoJar.sh  pom.xml
demo/src/main/java/com/binchencoder/skylb/demo/: BUILD.bazel  ConsistentHashClient.java  GreetingClient.java  SingleGreetingServer.java
demo/src/main/java/com/jingoal/skylb/demo/: BUILD  Configuration.java  ConsistentHashClient.java  ConsistentHashClientMultiSvc.java  GreetingClient.java  GreetingServer.java  SingleGreetingServer.java
demo/src/main/resources/: BUILD  logback.xml
docs/: faq.md  metrics.md  userguide-golang.md  userguide-java.md
docs/images/: skylb-api.dia
handlers/: BUILD  BUILD.bazel  grpc.go  grpc_test.go  sql.go
internal/: BUILD.bazel  client.go
internal/flags/: BUILD  BUILD.bazel  flags.go
internal/flags/client/: BUILD  flags.go
internal/health/: BUILD  BUILD.bazel  ctx.go  ctx_test.go  health.go
internal/rpccli/: BUILD  BUILD.bazel  rpc.go
internal/skylb/: BUILD  BUILD.bazel  client.go  debug.go  direct_builder.go  directbuilder.go  keeper.go  locator.go  locator_test.go  resolver.go  resolver_test.go  skylb_builder.go  subset.go  subset_test.go  util.go  util_test.go  watcher.go  watcher_test.go
java/: pom.xml
java/src/main/java/com/binchencoder/skylb/: BUILD
java/src/main/java/com/binchencoder/skylb/balancer/consistenthash/: BUILD  ConsistentHashLoadBalancer.java
java/src/main/java/com/binchencoder/skylb/balancer/roundrobin/: BUILD
java/src/main/java/com/binchencoder/skylb/grpc/: BUILD
java/src/main/java/com/binchencoder/skylb/healthcheck/: BUILD
java/src/main/java/com/binchencoder/skylb/util/: BUILD  GrpcErrorUtils.java
java/src/main/java/com/jingoal/skylb/: BUILD  MonitorService.java  Properties.java  ReportCallback.java  ResolvedServerInfo.java  ResolvedServerInfoGroup.java  ServerDiscovery.java  ServerListener.java  ServerMonitor.java  SkyLBConst.java  SkyLBNameResolverFactory.java  SkyLBServiceReporter.java  SkyLBUtils.java  Spec.java
java/src/main/java/com/jingoal/skylb/balancer/consistenthash/: BUILD  ConsistentHash.java  ConsistentHashLoadBalancer.java  ConsistentHashLoadBalancerFactory.java  Crc32Hash.java  HashFunction.java
java/src/main/java/com/jingoal/skylb/balancer/roundrobin/: BUILD  RoundRobinLoadBalancer.java  RoundRobinLoadBalancerFactory.java
java/src/main/java/com/jingoal/skylb/grpc/: BUILD  Channels.java  ClientTemplate.java  ConsistentHashInterceptor.java  Constants.java  HeaderClientInterceptor.java  HeaderServerInterceptor.java  ServerTemplate.java  ServiceAddrUtil.java  ServiceDefinition.java
java/src/main/java/com/jingoal/skylb/grpchealth/: BUILD  JinHealthServiceImpl.java  JinHealthServiceInterceptor.java
java/src/main/java/com/jingoal/skylb/healthcheck/: BUILD  CallOption.java  Sizer.java  SizerLBFactory.java  SizerUser.java
java/src/main/java/com/jingoal/skylb/metrics/: ClientMetrics.java  Configuration.java  Constants.java  GrpcMethod.java  MetricsClientCall.java  MetricsClientCallListener.java  MetricsClientInterceptor.java  MetricsServerCall.java  MetricsServerCallListener.java  MetricsServerInterceptor.java  ServerMetrics.java  SimpleTextFormat.java
java/src/main/java/com/jingoal/skylb/util/: BUILD  GrpcErrorUtils.java  ServiceNameUtil.java
java/src/test/java/com/jingoal/hashring/: ConsistentHashPrototype.java  ConsistentHashTest.java  Crc32HashTest.java
java/src/test/java/com/jingoal/skylb/grpc/: ServiceAddrUtilTest.java
java/src/test/java/com/jingoal/skylb/util/: ServiceNameUtilTest.java
lameduck/: BUILD  lameduck.go  lameduck_test.go
metrics/: BUILD  BUILD.bazel  README.md  client.go  client_reporter.go  server.go  server_reporter.go  services.go  util.go
naming/: BUILD.bazel
prefix/: BUILD  prefix.go
proto/: BUILD  BUILD.bazel  api.pb.go  api.proto  pom.xml
resolver/: BUILD.bazel  direct_builder.go  register.go  resolver.go  skylb_builder.go  subset.go  subset_test.go  target.go  target_test.go
resolver/internal/: BUILD.bazel  directbuilder.go  resolver.go  skylbbuilder.go  subset.go  subset_test.go
server/: BUILD  BUILD.bazel  server.go
testing/: BUILD  BUILD.bazel  handler.go  keeper.go
tests/: BUILD  BUILD.bazel  int_test.go  strings_test.go  target_test.go
util/: BUILD  etcd.go
