package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/binchencoder/skylb-api/balancer",
    deps = [
        "//internal/health:go_default_library",
        "@com_github_binchencoder_letsgo//grpc:go_default_library",
        "@com_github_binchencoder_letsgo//hashring:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
    ],
)

# TODO(chenbin) 2019/08/17 
# ERROR: /skylb-api/balancer/BUILD:28:1: in go_test rule //balancer:small_tests: 
# target '@org_golang_google_grpc//internal/leakcheck:go_default_library' is not visible from target '//balancer:small_tests'. 
# Check the visibility declaration of the former target if you think the dependency is legitimate
# go_test(
#     name = "small_tests",
#     size = "small",
#     srcs = [
#         "roundrobin_test.go",
#     ],
#     embed = [
#         ":go_default_library",
#     ],
#     deps = [
#         "@org_golang_google_grpc//:go_default_library",
#         "@org_golang_google_grpc//balancer/roundrobin:go_default_library",
#         "@org_golang_google_grpc//codes:go_default_library",
#         "@org_golang_google_grpc//grpclog/glogger:go_default_library",
#         "@org_golang_google_grpc//internal/leakcheck:go_default_library",
#         "@org_golang_google_grpc//peer:go_default_library",
#         "@org_golang_google_grpc//resolver:go_default_library",
#         "@org_golang_google_grpc//resolver/manual:go_default_library",
#         "@org_golang_google_grpc//status:go_default_library",
#         "@org_golang_google_grpc//test/grpc_testing:go_default_library",
#     ],
# )
