package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/binchencoder/skylb-apiv2/internal",
    deps = [
        "//internal/flags:go_default_library",
        "//internal/flags/client:go_default_library",
        "//internal/rpccli:go_default_library",
        "//proto:go_default_library",
        "@com_github_binchencoder_letsgo//grpc:go_default_library",
        "@com_github_binchencoder_letsgo//service/naming:go_default_library",
        "@com_github_binchencoder_letsgo//sync:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
    ],
)

go_test(
    name = "tests",
    size = "small",
    srcs = [
        "chainclientinterceptors_test",
        "chainserverinterceptors_test.go",
    ],
    embed = [
        ":go_default_library",
    ],
    deps = [
        "//proto:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
    ],
)
