package(default_visibility = ["//__subpackages__"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "tests",
    size = "medium",
    srcs = glob(["*_test.go"]),
    deps = [
        "@com_github_binchencoder_letsgo//strings:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_google_grpc//resolver:go_default_library",
    ],
)
