load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
# load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "skytest-client",
    srcs = ["client.go"],
    deps = [
        "//client:go_default_library",
        "//cmd/skytest/proto:go_default_library",
        "//proto:go_default_library",
        "@com_github_binchencoder_letsgo//:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
    ],
)

go_binary(
    name = "skytest-server",
    srcs = ["server.go"],
    deps = [
        "//client:go_default_library",
        "//cmd/skytest/proto:go_default_library",
        "//server:go_default_library",
        "@com_github_binchencoder_letsgo//:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

# pkg_tar(
#     name = "binary",
#     srcs = [
#         ":skytest-client",
#         ":skytest-server",
#     ],
#     package_dir = "/skylb",
# )

# docker_build(
#     name = "latest",
#     base = "//bld_tools/docker/ubuntu:base",
#     cmd = "/skylb/start.sh",
#     repository = "harbor.binchencoder.ltd",
#     tag = "skylb/skytest",
#     tars = [
#         ":binary",
#     ],
# )
