package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ctx.go",
        "health.go",
    ],
    importpath = "github.com/binchencoder/skylb-apiv2/internal/health",
    deps = [
        "@com_github_binchencoder_letsgo//hashring:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//balancer:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "small_tests",
    size = "small",
    srcs = [
        "ctx_test.go",
    ],
    embed = [
        ":go_default_library",
    ],
    deps = [
        "@com_github_smartystreets_goconvey//convey:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
