package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/binchencoder/skylb-apiv2/internal/skylb",
    deps = [
        "//balancer:go_default_library",
        "//client/option:go_default_library",
        "//internal/flags:go_default_library",
        "//internal/flags/client:go_default_library",
        "//internal/health:go_default_library",
        "//internal/rpccli:go_default_library",
        "//metrics:go_default_library",
        "//naming:go_default_library",
        "//proto:go_default_library",
        "//resolver:go_default_library",
        "@com_github_binchencoder_letsgo//grpc:go_default_library",
        "@com_github_binchencoder_letsgo//sync:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_grpc_ecosystem_grpc_opentracing//go/otgrpc:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
        "@org_golang_google_grpc//resolver:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "tests",
    size = "small",
    srcs = glob(
        ["*_test.go"]
    ),
    embed = [
        ":go_default_library",
    ],
    deps = [
        "//client/option:go_default_library",
        "//proto:go_default_library",
        "//testing:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
    ],
)
