package(
    default_visibility = ["//visibility:public"],
)

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "api_proto",
    srcs = ["api.proto"],
)

go_proto_library(
    name = "api_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
    ],
    importpath = "github.com/binchencoder/skylb-api/cmd/skytest/proto",
    proto = ":api_proto",
)

go_library(
    name = "go_default_library",
    embed = [
        ":api_go_proto",
    ],
    importpath = "github.com/binchencoder/skylb-api/cmd/skytest/proto",
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

java_proto_library(
    name = "api_java_proto",
    deps = [
        ":api_proto",
    ],
)

# java_lite_proto_library(
#     name = "api_java_lite_proto",
#     deps = [
#         ":api_proto",
#     ],
# )

# genproto_java(
#     name = "skytest_src",
#     srcs = ["api.proto"],
#     has_service = 1,
#     deps = [
#         "@com_github_binchencoder_ease_gateway//httpoptions:options_proto",
#         "@binchencoder_third_party_go//vendor/github.com/google/protobuf/src/google/protobuf:protos_java",
#         "@com_github_binchencoder_gateway_proto//data:data_srcjar",
#     ],
# )

# java_library(
#     name = "skytest",
#     # srcs = [":api_proto"],
#     runtime_deps = [
#         ":api_java_proto",
#     ],
#     deps = [
#         # "@com_github_binchencoder_ease_gateway//httpoptions",
#         "//vendor/github.com/binchencoder/third-party-java/dependencies/lib:grpc-1.18.0",
#     ],
# )
